methods.basics.Methods.scala.error
Compilation error:
Methods:6: error: not found: value Backward
  {Backward()}
   ^